Layout Bug Fixed.

--- a/src/components/Categories/ImagesGrid.css
+++ b/src/components/Categories/ImagesGrid.css
@@ -11,7 +11,7 @@
 
 .collections{
   padding:50px;
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -31,7 +31,7 @@
 }
 
 .collections h4{
-  text-align: center;
+  /* text-align: center; */
 
 }
 #collection-name {
@@ -46,6 +46,7 @@ a{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 .my-btn {
   width: max-content;
