--- a/src/components/Header/PageHeader.css
+++ b/src/components/Header/PageHeader.css
@@ -56,7 +56,7 @@
   background-color: #f9f9f9;
   min-width: 200px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 10;
 margin-top: 55px;
 }
 
